added feature spec for creating new users

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,4 +7,9 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
+    %p
+      This is where the header would go
     = yield
+
+    %p
+      This is where the footer would go
