--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,2 +1,29 @@
-%h2
-  There will be a form on this page that allows users to sign up
+%h3
+  This is the form page for creating a new user
+
+
+- if @user.errors.any? 
+  - @user.errors.full_messages.each do |error|
+    = error
+
+= form_for @user do |f| 
+  = f.label :username
+  = f.text_field :username
+
+  = f.label :firstname
+  = f.text_field :firstname
+
+  = f.label :lastname
+  = f.text_field :lastname
+
+  = f.label :email
+  = f.email_field :email
+
+  = f.label :password
+  = f.password_field :password
+
+  = f.label :password_confirmation
+  = f.password_field :password_confirmation
+
+  = f.submit 
+  
