--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -2,5 +2,7 @@
   This is the home page for the fake contact manager thing
 
 = link_to 'Log In', login_path
+%br
 
+= link_to 'About', about_path
 
