added an empty spec for deleting a user

--- a/app/views/static_pages/_about.html.haml
+++ b/app/views/static_pages/_about.html.haml
@@ -5,3 +5,5 @@
   This should appear in the modal
   The variable from the controller is
   = @test_variable
+
+= link_to 'Close', '#', data: { dismiss: 'modal' }
