--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -6,11 +6,12 @@
   = @users.count
 
 - @users.each do |user|
-  %p 
-    Username
-    = user.username
-    - if current_user.admin? && !user.admin?
-      = link_to 'Delete User', user_path(user.id), method: :delete,id: "delete-user-#{user.id}", data: { remote: true }
+  %div{ id: "user-info-box-#{user.id}" }
+    %p 
+      Username
+      = user.username
+      - if current_user.admin? && !user.admin?
+        = link_to 'Delete User', user_path(user.id), method: :delete,id: "delete-user-#{user.id}", data: { remote: true }
 
 
 = link_to 'Add New User', new_user_path
